--- a/Vue-Morty/tsconfig.app.json
+++ b/Vue-Morty/tsconfig.app.json
@@ -1,6 +1,7 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts",
+  "include": [
+    "src/env.d.ts",
     "shims-vue.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"],
   "files": [],
